--- a/main.html
+++ b/main.html
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="/resource/style.css">
+</head>
 <main class="services container">
 
         <!-- Contenedor de las secciones en cuadrícula -->
