--- a/main.html
+++ b/main.html
@@ -1,6 +1,8 @@
+<html lang="es">
 <head>
     <link rel="stylesheet" href="/resource/style.css">
 </head>
+<body>
 <main class="services container">
 
         <!-- Contenedor de las secciones en cuadrícula -->
@@ -34,3 +36,5 @@
             </div>
         </div>
     </main>
+</body>
+</html>
